# ml-project

./: .gitignore  README.md  app_demo.py  cli_demo.py  demo.py  environment.yml  pyproject.toml  training.ipynb
ECLyon-ML-Course-2024-T4/notebooks/: Machine Learning Course - 2 Data preprocessing.ipynb
models/: model_full  model_tuned
notebooks/: cleaning.ipynb  training_drink.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/maincode/: custom_functions.py
