[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Naomi Helmbold <naomi.helmbold@edu.em-lyon.com>"]
readme = "README.md"
packages = [{include = "maincode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
fire = "^0.7.0"
streamlit = "^1.39.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]  
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
